--- a/src/elem/left/style.scss
+++ b/src/elem/left/style.scss
@@ -1,3 +1,19 @@
 ul {
   list-style: none;
 }
+.frame {
+  padding: 0;
+  margin: 0 auto;
+  width: 300px;
+}
+.logotip {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  background-color: rgb(5, 5, 46);
+  width: 100%;
+}
+.logo {
+  box-sizing: border-box;
+  width: 30%;
+}
