--- a/src/elem/left/style.scss
+++ b/src/elem/left/style.scss
@@ -1,3 +1,6 @@
+:root {
+  --bg-color: rgb(5, 5, 46);
+}
 ul {
   list-style: none;
 }
@@ -10,10 +13,18 @@ ul {
   display: flex;
   align-items: center;
   justify-content: start;
-  background-color: rgb(5, 5, 46);
+  background-color: var(--bg-color);
   width: 100%;
 }
 .logo {
   box-sizing: border-box;
   width: 30%;
+}
+.list {
+  border: 1px solid var(--bg-color);
+  box-sizing: border-box;
+  width: 100%;
+}
+.items {
+  width: 100%;
 }
