--- a/src/elem/left/style.css
+++ b/src/elem/left/style.css
@@ -13,17 +13,17 @@ ul {
 }
 
 .logotip {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: var(--bg-color);
-  width: 100%;
 }
 
 .logo {
@@ -37,9 +37,21 @@ ul {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 100%;
+  padding: 0;
+}
+
+.list :nth-child(2) {
+  padding-top: 20px;
 }
 
 .items {
   width: 100%;
+  padding-left: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.list_elem {
+  padding: 10px;
 }
 /*# sourceMappingURL=style.css.map */
