--- a/src/elem/body/style.css
+++ b/src/elem/body/style.css
@@ -5,6 +5,10 @@
           box-sizing: border-box;
 }
 
+:root {
+  --line-color: rgb(5, 5, 46);
+}
+
 .container {
   margin: 0 auto;
   width: 1140px;
@@ -32,5 +36,8 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  border: 1px solid var(--line-color);
+  height: 90vh;
+  margin-top: 15px;
 }
 /*# sourceMappingURL=style.css.map */
