--- a/src/elem/body/style.scss
+++ b/src/elem/body/style.scss
@@ -3,6 +3,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+:root {
+  --line-color: rgb(5, 5, 46);
+}
 .container {
   margin: 0 auto;
   width: 1140px;
@@ -19,4 +22,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  border: 1px solid var(--line-color);
+  height: 90vh;
+  margin-top: 15px;
 }
