--- a/src/elem/left/style.css
+++ b/src/elem/left/style.css
@@ -33,10 +33,11 @@ ul {
 }
 
 .list {
-  border: 1px solid var(--bg-color);
+  border-right: 1px solid var(--bg-color);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 100%;
+  height: 90vh;
   padding: 0;
 }
 
