--- a/src/elem/left/style.scss
+++ b/src/elem/left/style.scss
@@ -21,9 +21,10 @@ ul {
   width: 30%;
 }
 .list {
-  border: 1px solid var(--bg-color);
+  border-right: 1px solid var(--bg-color);
   box-sizing: border-box;
   width: 100%;
+  height: 90vh;
   padding: 0;
   :nth-child(2) {
     padding-top: 20px;
