--- a/src/elem/left/style.css
+++ b/src/elem/left/style.css
@@ -12,20 +12,6 @@ ul {
   width: 300px;
 }
 
-.logotip {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: var(--bg-color);
-}
-
 .logo {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -37,11 +23,11 @@ ul {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 100%;
-  height: 90vh;
+  height: 80vh;
   padding: 0;
 }
 
-.list :nth-child(2) {
+.list :nth-child(1) {
   padding-top: 20px;
 }
 
@@ -54,5 +40,10 @@ ul {
 
 .list_elem {
   padding: 10px;
+}
+
+.list_elem:hover {
+  color: white;
+  background-color: #330404;
 }
 /*# sourceMappingURL=style.css.map */
