--- a/src/elem/left/style.scss
+++ b/src/elem/left/style.scss
@@ -9,13 +9,7 @@ ul {
   margin: 0 auto;
   width: 300px;
 }
-.logotip {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--bg-color);
-}
+
 .logo {
   box-sizing: border-box;
   width: 30%;
@@ -24,9 +18,9 @@ ul {
   border-right: 1px solid var(--bg-color);
   box-sizing: border-box;
   width: 100%;
-  height: 90vh;
+  height: 80vh;
   padding: 0;
-  :nth-child(2) {
+  :nth-child(1) {
     padding-top: 20px;
   }
 }
@@ -37,4 +31,8 @@ ul {
 }
 .list_elem {
   padding: 10px;
+}
+.list_elem:hover {
+  color: white;
+  background-color: rgb(51, 4, 4);
 }
