--- a/src/elem/rigth/style.scss
+++ b/src/elem/rigth/style.scss
@@ -1,4 +1,13 @@
+:root {
+  --color: rgb(5, 5, 46);
+}
+
 .const {
   width: 900px;
   height: 100%;
+}
+.navbar_rigth {
+  background-color: var(--color);
+  width: 100%;
+  color: white;
 }
