--- a/src/elem/body/style.css
+++ b/src/elem/body/style.css
@@ -73,5 +73,18 @@
 .name {
   color: white;
   width: 900px;
+  text-align: center;
+}
+
+.navbar_rigth {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=style.css.map */
